kubernetes/apps/selfhosted/koment/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: koment
spec:
  hostnames:
    - koment.janpuc.com
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - matches:
        - headers:
            - name: authorization
              type: RegularExpression
              value: "^Bearer\\s.+$"
      backendRefs:
        - name: koment
          port: 8080
    - filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: X-Forwarded-User
                value: anonymous
              - name: X-Forwarded-Email
                value: anonymous@janpuc.com
      backendRefs:
        - name: koment
          port: 8080
